--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
     "watch": "node_modules/.bin/webpack --mode=development --watch=true"
   },
   "dependencies": {
-    "chart.js": "^2.9.2",
+    "chart.js": "^2.9.4",
     "font-awesome": "^4.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.0",
-    "@babel/preset-env": "^7.7.1",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "babel-loader": "^8.2.2",
     "babel-plugin-prismjs": "^1.1.1",
     "babel-preset-env": "^1.7.0",
-    "css-loader": "^3.2.0",
-    "node-sass": "^4.13.0",
-    "prismjs": "^1.17.1",
+    "css-loader": "^5.2.6",
+    "file-loader": "^5.1.0",
+    "node-sass": "^4.14.1",
+    "prismjs": "^1.23.0",
     "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "file-loader": "^5.0.2",
-    "url-loader": "^3.0.0"
+    "style-loader": "^1.3.0",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   }
 }
