--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "node_modules/.bin/webpack --mode=production",
-    "watch": "node_modules/.bin/webpack --mode=development --watch=true"
+    "build": "webpack --mode=production",
+    "watch": "webpack --mode=development --watch"
   },
   "dependencies": {
-    "chart.js": "^2.9.4",
+    "chart.js": "^4.2.1",
     "font-awesome": "^4.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-prismjs": "^1.1.1",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-prismjs": "^2.1.0",
     "babel-preset-env": "^1.7.0",
-    "css-loader": "^5.2.6",
-    "file-loader": "^5.1.0",
-    "node-sass": "^4.14.1",
-    "prismjs": "^1.23.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.3.0",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
+    "prismjs": "^1.29.0",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1"
   }
 }
