Add slide to install WordPress with Docker

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "plugins": [
     ["prismjs", {
-      "languages": ["php", "js", "css", "shell"],
+      "languages": ["php", "js", "css", "shell", "yaml"],
       "plugins": ["line-numbers", "line-highlight"],
       "theme": "tomorrow",
       "css": true
